Fix form reading content-media files from resources